# rules_arm_clang

./: .gitignore  MODULE.bazel  README.md  arm_clang.bzl  armclang_version.py  base.bzl  gen.bzl  release.py
.br/: metadata.template.json
.github/workflows/: release.yaml  release.yml
arm_clang/: BUILD  arm_clang.bzl  config.bzl.tpl  gen.bzl.tpl  toolchain.bzl
arm_clang/toolchain/: BUILD  config.bzl.tpl
example/: .bazelrc  BUILD  MODULE.bazel
toolchain/: arm_clang_version.py  config.bzl.tpl  gen.bzl.tpl  toolchain.bzl
