""" Module """
module(name = "rules_arm_clang")

bazel_dep(name = "platforms", version = "0.0.11")

toolchains_ext = use_extension(
    "//arm_clang:arm_clang.bzl",
    "toolchains_ext",
)
use_repo(toolchains_ext, "arm_clang_")

register_toolchains("@arm_clang_//toolchain:cm3")
register_toolchains("@arm_clang_//toolchain:cm4")
register_toolchains("@arm_clang_//toolchain:cm4s")
register_toolchains("@arm_clang_//toolchain:cm23")
register_toolchains("@arm_clang_//toolchain:cm33")
